added primitive nav bar

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <body>
     <h1 class="bigN" >N</h1>
     <h1 class="logo">Style</h1>
-
     <button class="nav">Login</button>
     <button class="nav">Register</button>
+    <button class="nav">Search</button>
+    <hr>
     
 </body>
 </html>
