altered page design

--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
 <body>
     <h1 class="bigN" >N</h1>
     <h1 class="logo">Style</h1>
+    <hr>
     <button class="nav">Login</button>
     <button class="nav">Register</button>
-    <button class="nav">Search</button>
-    <hr>
-    
+    <p id="description">Give and get fashion advice!</p>
+    <h2><span class="counter">0</span> users and counting!</h2>
+        <h3>Register today to start browsing and rating styles</h3>
+        <h1>OR</h1>
+        <h3>Get your style critique in minutes from experts across the world.</h3>
 </body>
+
 </html>
